# sstring

./: .gitignore  CMakeLists.txt  Makefile  README.md  sstring.c  sstring.h  test.c
include/: sstring.h
src/: CMakeLists.txt  array.h  bst.h  generic.h  generic_array.h  generic_macros.h  generic_pointer.h  regex.c  regex.h  sstring.c  sstring.h  sstringio.c  sstringio.h  test.c
tests/: CMakeLists.txt  sstring_test.c
